--- a/pokedexApp/package.json
+++ b/pokedexApp/package.json
@@ -14,6 +14,7 @@
     "react-aria-components": "^1.0.0-alpha.4",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "sass": "^1.62.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
