--- a/pokedexApp/package.json
+++ b/pokedexApp/package.json
@@ -10,9 +10,11 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-aria-components": "^1.0.0-alpha.4",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "sass": "^1.62.1",
@@ -42,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.195"
   }
 }
