--- a/pokedexApp/package.json
+++ b/pokedexApp/package.json
@@ -14,7 +14,9 @@
     "react": "^18.2.0",
     "react-aria-components": "^1.0.0-alpha.4",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "sass": "^1.62.1",
