--- a/pokedexApp/package.json
+++ b/pokedexApp/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
+    "react-tooltip": "^5.19.0",
     "sass": "^1.62.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
