--- a/pokedexApp/package.json
+++ b/pokedexApp/package.json
@@ -1,54 +1,59 @@
 {
-  "name": "pokedex",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.34",
-    "@types/react": "^18.2.8",
-    "@types/react-dom": "^18.2.4",
-    "lodash": "^4.17.21",
-    "react": "^18.2.0",
-    "react-aria-components": "^1.0.0-alpha.4",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.2",
-    "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.2",
-    "react-scripts": "^5.0.1",
-    "react-toastify": "^9.1.3",
-    "react-tooltip": "^5.19.0",
-    "sass": "^1.62.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "tsc && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.14.195"
-  }
+	"name": "pokedex",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/user-event": "^13.5.0",
+		"@types/jest": "^27.5.2",
+		"@types/node": "^16.18.34",
+		"@types/react": "^18.2.8",
+		"@types/react-dom": "^18.2.4",
+		"lodash": "^4.17.21",
+		"react": "^18.2.0",
+		"react-aria-components": "^1.0.0-alpha.4",
+		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.45.2",
+		"react-icons": "^4.10.1",
+		"react-router-dom": "^6.14.2",
+		"react-scripts": "^5.0.1",
+		"react-toastify": "^9.1.3",
+		"react-tooltip": "^5.19.0",
+		"sass": "^1.62.1",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"start": "tsc && react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test --watch",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@babel/preset-react": "^7.22.5",
+		"@babel/preset-typescript": "^7.22.5",
+		"@testing-library/react": "^14.0.0",
+		"@types/lodash": "^4.14.195",
+		"jest": "^29.6.2",
+		"ts-jest": "^29.1.1",
+		"ts-node": "^10.9.1",
+		"typescript": "^5.1.6"
+	}
 }
