--- a/pokedexApp/package.json
+++ b/pokedexApp/package.json
@@ -23,7 +23,7 @@
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"start": "tsc && react-scripts start",
+		"start": "set PORT=3001 && tsc && react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test --watch",
 		"eject": "react-scripts eject"
